--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-to-text": "^9.0.5",
     "microcms-js-sdk": "^2.7.0",
     "next": "14.0.4",
+    "plaiceholder": "^2.5.0",
     "react": "^18",
     "react-dom": "^18"
   }
